# student_wellbeing_prediction

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
notebooks/: 01_exploracao_dados.ipynb
notebooks/.ipynb_checkpoints/: 01_exploracao_dados-checkpoint.ipynb
src/data/: make_dataset.py
src/features/: __init__.py  build_features.py
src/student_depression/: __init__.py  __main__.py  paths.py
src/student_depression/config/: __init__.py  config.yaml  loader.py
src/student_depression/data/: __init__.py  load_data.py  split_data.py
src/student_depression/evaluation/: __init__.py  cross_validation.py  metrics.py
src/student_depression/models/: __init__.py  model_registry.py  torch_mlp.py
src/student_depression/preprocessing/: __init__.py  feature_selection.py  preprocessors.py
src/student_depression/utils/: __init__.py  logging.py
src/student_depression/visualization/: __init__.py  plots.py
src/visualization/: __init__.py  plots.py
