[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
name = "student-depression"
version = "0.1.0"
description = "Modular training and evaluation for student depression classification."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.0",
    "xgboost>=3.1.0",
]

[project.scripts]
student-depression = "student_depression.__main__:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
